# tauri-plugin-system-audio

./: Cargo.toml  LICENSE  README.md  THIRD-PARTY.md  build.rs
.github/workflows/: ci.yml
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: permission_status.toml
permissions/schemas/: schema.json
src/: apm.rs  capture.rs  lib.rs  loopback.rs  mixer.rs  resampler.rs
webrtc-apm/: ABI.md
