[package]
name = "tauri-plugin-system-audio"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Dual audio capture for Tauri 2 — microphone + system audio (WASAPI loopback) with WebRTC AEC3 echo cancellation, resampled to 16 kHz mono PCM for streaming STT."
license = "MIT"
repository = "https://github.com/Subcue/tauri-plugin-system-audio"
authors = ["Subcue AI LLC"]
keywords = ["tauri", "audio", "wasapi", "loopback", "echo-cancellation"]
categories = ["multimedia::audio", "gui"]
links = "tauri-plugin-system-audio"
exclude = ["/.github"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
log = "0.4"
parking_lot = "0.12"
# cpal 0.16 has built-in WASAPI loopback support on Windows — requesting an
# input stream on a render (output) device automatically sets
# `AUDCLNT_STREAMFLAGS_LOOPBACK`. No cpal feature flag required; see
# `src/loopback.rs`.
cpal = "0.16"
crossbeam-channel = "0.5"
anyhow = "1"
thiserror = "2"
base64 = "0.22"

[target."cfg(target_os = \"windows\")".dependencies]
libloading = "0.8"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
] }
